--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>App Bar</title>
+		<title>Bar - 1.0</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
